add main menu & game over & save high score and coin

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=InfiniteRun
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/PlayMap.PlayMap
-GameDefaultMap=/Game/PlayMap.PlayMap
+EditorStartupMap=/Game/MainMenu.MainMenu
+GameDefaultMap=/Game/MainMenu.MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
